Fix controls overlap

--- a/web/src/styles/components/variant.scss
+++ b/web/src/styles/components/variant.scss
@@ -22,11 +22,6 @@
   }
 }
 
-.substitution .propchip {
-  font-size: 0.5vw !important;
-  // padding: 0vw;
-}
-
 .arrow {
   font-size: 2vw !important;
 }
@@ -65,6 +60,7 @@ hr {
 
 .ddg p.unit {
   color: #888;
+  font-size: 0.6vw;
 }
 
 .evidence {
@@ -82,10 +78,6 @@ hr {
   color: #999;
 }
 
-.aa {
-  // max-width: 300px;
-}
-
 .aa img {
   width: 3.8vw;
 }
@@ -97,7 +89,8 @@ hr {
 }
 
 .propchip {
-  font-size: 11px !important;
+  // font-size: 0.5vw !important;
+  font-size: 9px !important;
   height: 21px !important;
   border: solid 1px rgb(68, 68, 68) !important;
   margin: 1px;
